RESOLVED FIXED156570
Collapsed border cache invalidation can lead to O(n^2) during style resolve
https://bugs.webkit.org/show_bug.cgi?id=156570
Summary Collapsed border cache invalidation can lead to O(n^2) during style resolve
Antti Koivisto
Reported 2016-04-14 01:42:12 PDT
RenderTable::invalidateCollapsedBorders traverses all cells. It is called when table cell border changes. This can result in O(n^2) during style resolve.
Attachments
patch (4.45 KB, patch)
2016-04-14 01:46 PDT, Antti Koivisto
no flags
Antti Koivisto
Comment 1 2016-04-14 01:46:43 PDT
Radar WebKit Bug Importer
Comment 2 2016-04-14 01:47:15 PDT
WebKit Commit Bot
Comment 3 2016-04-14 14:09:10 PDT
Comment on attachment 276381 [details] patch Clearing flags on attachment: 276381 Committed r199552: <http://trac.webkit.org/changeset/199552>
WebKit Commit Bot
Comment 4 2016-04-14 14:09:13 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.