Collapsed border cache invalidation can lead to O(n^2) during style resolve https://bugs.webkit.org/show_bug.cgi?id=156570

Reviewed by Darin Adler.

RenderTable::invalidateCollapsedBorders traverses all cells. It is called when table cell border changes.
This can result in O(n^2) during style resolve.

* rendering/RenderTable.cpp:
(WebCore::RenderTable::layout):
(WebCore::RenderTable::invalidateCollapsedBorders):

    For cell border style change invalidate the hasEmptyCollapsedBorder bits only for the neighbouring cells.
    They are the only ones that can be affected.

* rendering/RenderTable.h:
(WebCore::RenderTable::collapsedBordersAreValid):
(WebCore::RenderTable::collapsedEmptyBorderIsPresent):
(WebCore::RenderTable::currentBorderValue):
* rendering/RenderTableCell.cpp:
(WebCore::RenderTableCell::styleDidChange):


Canonical link: https://commits.webkit.org/174692@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@199552 268f45cc-cd09-0410-ab3c-d52691b4dbfc